--- a/src/components/landing/style.css
+++ b/src/components/landing/style.css
@@ -1,15 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Creepster');
+
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
-h1 {
-    font-family: 'Creepster';
+body {
+    background-color: black;
 }
-
 
 h2 {
     font-family: 'Poppins';
     font-size: medium;
-    text-align: left;
+    text-align: center;
     font-weight: bold;
 
 }
@@ -17,12 +16,4 @@ h2 {
 h3 {
     font-family: 'Poppins';
     font-size: small;
-}
-
-button {
-    border-radius: 10px;
-    background-color: white;
-    padding-bottom: 10px;
-    border: none;
-    cursor: pointer;
 }
