routes done, signup styling done

--- a/client/src/components/login/style.css
+++ b/client/src/components/login/style.css
@@ -74,3 +74,12 @@ body {
   p {
     color: white;
   }
+
+  .link {
+    color: gray;
+    font-weight: bold;
+  }
+
+  .link:hover {
+    color: red;
+  }
