--- a/client/src/components/sign-up/style.css
+++ b/client/src/components/sign-up/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/horror-type');
+@import url('https://fonts.googleapis.com/css2?family=Nosifer&display=swap');
 
 body {
     background-color: black;
@@ -23,21 +24,37 @@ body {
   h2 {
     color: #800000;
     text-align: center;
-    font-family: 'Horror Type', sans-serif;
-    font-size: 8em;
-    letter-spacing: 7px;
+    font-family: 'Nosifer', sans-serif;
+    font-size: 3em;
+    letter-spacing: 2px;
     text-shadow: 0 0 5px 2px white;
+    font-weight: normal;
   }
 
   .form {
     margin-bottom: 20px;
+    
+  }
+
+  .form input {
+    color: black;
+  }
+
+  input[type="email"],
+  input[type="password"],
+  input[type="username"] {
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #ffffff;
   }
 
   .loginLink {
-    color: white;
+    color: gray;
+    font-weight: bold;
     padding: 30px;
     font-size: 15px;
-    text-decoration: none;
   }
 
   .loginLink:hover {
