--- a/client/src/components/header/style.css
+++ b/client/src/components/header/style.css
@@ -1,12 +1,14 @@
-@import url('https://fonts.cdnfonts.com/css/horror-type');
+/* @import url('https://fonts.cdnfonts.com/css/horror-type'); */
+@import url('https://fonts.googleapis.com/css2?family=Nosifer&display=swap');
 
 .name {
-    background-color: #aa7b7b;
-    color: #800000;
+    background-color: #030303;
+    color: #9a0707;
     text-align: left;
-    font-family: 'Horror Type', sans-serif;
-    font-size: 5em;
-    letter-spacing: 7px;
+    font-family: 'Nosifer', sans-serif;
+    font-size: 3em;
+    letter-spacing: 3px;
     text-shadow: 0 0 5px 2px white;
     padding-left: 25px;
+    padding-top: 10px;
   }
