--- a/client/src/components/profile/style.css
+++ b/client/src/components/profile/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Nosifer&display=swap');
+
 .card-body {
     /* background-image: linear-gradient(white, red); */
     border-radius: 5px;
+    box-shadow: 0 0 10px 0 white;
 }
 
 .outer {
@@ -15,4 +18,10 @@
 .bio {
    padding: 20px; 
    resize: none;
+}
+
+h1 {
+    color: #9a0707;
+    text-align: center;
+    font-family: 'Nosifer', sans-serif;
 }
