--- a/client/src/components/quiz/style.css
+++ b/client/src/components/quiz/style.css
@@ -3,62 +3,40 @@ body {
     color: #fff;
 }
 
-/* Quiz Container */
-.quiz-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', sans-serif;
-    background-color: #000000;
-    border-radius: 5px;
-    box-shadow: 0 0 10px 0 white;
-}
-
 /* Results Container */
 .result-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
     background-color: #000000;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
 }
 
 .result-container h2 {
-    margin-bottom: 10px;
     color: #9a0707;
+    font-size: 30px;
 }
 
 .result-container h3 {
-    margin-bottom: 20px;
     color: #9a0707;
+    font-size: 18px;
 }
 
 .result-container p {
-    margin-bottom: 20px;
     color: #9a0707;
+    font-size: 15px;
+    padding: 3px;
 }
 
 .result-container img {
-    width: 200px;
-    height: 200px;
+    width: 120px;
+    height: 120px;
     object-fit: cover;
-    margin-bottom: 10px;
-}
-
-/* Question Container */
-.question-container {
-    margin-bottom: 20px;
+    border-radius: 5px;
 }
 
 .question-container h2 {
-    margin-bottom: 20px;
     color: #9a0707;
+    font-size: 30px;
 }
 
 .question-container p {
-    margin-bottom: 20px;
     color: #ffffff;
 }
 
@@ -67,7 +45,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-bottom: 20px;
 }
 
 .option {
@@ -76,19 +53,22 @@ body {
     align-items: center;
     justify-content: center;
     padding: auto;
-    margin: 10px;
+    margin: 6px;
     border-radius: 10px;
     background-color: #333;
+    color: #ffffff;
+    font-size: 14px;
     cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='60' viewport='0 0 100 100' style='fill:black;font-size:30px;'><text y='50%'>🔪</text></svg>") 16 0, auto;
     /*!emojicursor.app*/
 }
 
 .option img {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     margin-block: unset;
     object-fit: cover;
     border: 1px transparent;
+    border-radius: 5px;
     transition: border-color 0.3s ease-in-out;
 }
 
@@ -107,6 +87,7 @@ body {
 /* Restart Button */
 button {
     padding: 10px 20px;
+    margin: 15px;
     border: none;
     border-radius: 5px;
     background-color: #555;
@@ -125,4 +106,10 @@ button:disabled {
     opacity: 0.5;
     cursor: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='60' viewport='0 0 100 100' style='fill:black;font-size:30px;'><text y='50%'>🔪</text></svg>") 16 0, auto;
     /*!emojicursor.app*/
+}
+
+.footer {
+    margin: 80px;
+    width: 400px;
+    margin-left: 0px;
 }
